--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@tanstack/react-query": "^5.32.1",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0"
+    "react-hook-form": "^7.51.3",
+    "react-router-dom": "^6.23.0",
+    "sass": "^1.76.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
